--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 
 
     <Button
-        android:id="@+id/search"
+        android:id="@+id/buttonSearch"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
@@ -39,12 +39,12 @@
         app:cornerRadius="@dimen/corner_radius"
         app:icon="@drawable/ic_search"
         app:iconGravity="textStart"
-        app:iconPadding="10dp"
+        app:iconPadding="@dimen/padding_10"
         app:iconTint="@color/black" />
 
 
     <Button
-        android:id="@+id/mediaLibrary"
+        android:id="@+id/buttonMediaLibrary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
@@ -60,12 +60,12 @@
         app:cornerRadius="@dimen/corner_radius"
         app:icon="@drawable/ic_media_library"
         app:iconGravity="textStart"
-        app:iconPadding="10dp"
+        app:iconPadding="@dimen/padding_10"
         app:iconTint="@color/black" />
 
 
     <Button
-        android:id="@+id/settings"
+        android:id="@+id/buttonSettings"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/corner_radius"
@@ -82,7 +82,7 @@
         app:cornerRadius="@dimen/corner_radius"
         app:icon="@drawable/ic_settings"
         app:iconGravity="textStart"
-        app:iconPadding="10dp"
+        app:iconPadding="@dimen/padding_10"
         app:iconTint="@color/black" />
 
 </LinearLayout>
