--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/back"
+            android:id="@+id/buttonBack"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_marginStart="20dp"
@@ -32,7 +32,6 @@
             android:textColor="@color/black"
             android:textSize="@dimen/main_menu_textSize" />
     </LinearLayout>
-
 
     <Switch
         android:layout_width="match_parent"
@@ -57,9 +56,9 @@
         android:fontFamily="@font/ys_display_regular"
         android:letterSpacing="0"
         android:paddingStart="@dimen/padding_16"
-        android:paddingTop="@dimen/padding_21"
+        android:paddingTop="@dimen/padding_20"
         android:paddingEnd="@dimen/padding_16"
-        android:paddingBottom="@dimen/padding_21"
+        android:paddingBottom="@dimen/padding_20"
         android:text="@string/share"
         android:textColor="@color/black"
         android:textFontWeight="400"
@@ -74,9 +73,9 @@
         android:fontFamily="@font/ys_display_regular"
         android:letterSpacing="0"
         android:paddingStart="@dimen/padding_16"
-        android:paddingTop="@dimen/padding_21"
+        android:paddingTop="@dimen/padding_20"
         android:paddingEnd="@dimen/padding_16"
-        android:paddingBottom="@dimen/padding_21"
+        android:paddingBottom="@dimen/padding_20"
         android:text="@string/support"
         android:textColor="@color/black"
         android:textFontWeight="400"
@@ -91,9 +90,9 @@
         android:fontFamily="@font/ys_display_regular"
         android:letterSpacing="0"
         android:paddingStart="@dimen/padding_16"
-        android:paddingTop="@dimen/padding_21"
+        android:paddingTop="@dimen/padding_20"
         android:paddingEnd="@dimen/padding_16"
-        android:paddingBottom="@dimen/padding_21"
+        android:paddingBottom="@dimen/padding_20"
         android:text="@string/terms_of_use"
         android:textColor="@color/black"
         android:textFontWeight="400"
