--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,86 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="?attr/colorPrimary"
     android:orientation="vertical"
     android:paddingLeft="@dimen/padding_16"
     android:paddingRight="@dimen/padding_16">
 
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="14dp"
         android:fontFamily="@font/ys_display_medium"
+        android:letterSpacing="0"
         android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="@dimen/main_menu_textSize"
+        android:textColor="@color/yp_white"
         android:textFontWeight="500"
-        android:letterSpacing="0"/>
-
+        android:textSize="@dimen/main_menu_textSize" />
 
     <Button
         android:id="@+id/buttonSearch"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        style="@style/MainMenuButtonStyle"
         android:layout_marginTop="40dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
-        android:fontFamily="@font/ys_display_medium"
         android:text="@string/search"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/main_menu_textSize"
-        android:textFontWeight="500"
-        android:letterSpacing="0"
-        app:cornerRadius="@dimen/corner_radius"
-        app:icon="@drawable/ic_search"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/padding_10"
-        app:iconTint="@color/black" />
-
+        app:icon="@drawable/ic_search" />
 
     <Button
         android:id="@+id/buttonMediaLibrary"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
-        android:fontFamily="@font/ys_display_medium"
+        style="@style/MainMenuButtonStyle"
         android:text="@string/media_library"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/main_menu_textSize"
-        android:textFontWeight="500"
-        android:letterSpacing="0"
-        app:cornerRadius="@dimen/corner_radius"
-        app:icon="@drawable/ic_media_library"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/padding_10"
-        app:iconTint="@color/black" />
-
+        app:icon="@drawable/ic_media_library" />
 
     <Button
         android:id="@+id/buttonSettings"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/corner_radius"
+        style="@style/MainMenuButtonStyle"
         android:layout_marginBottom="28dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
-        android:fontFamily="@font/ys_display_medium"
-        android:letterSpacing="0"
         android:text="@string/settings"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textFontWeight="500"
-        android:textSize="@dimen/main_menu_textSize"
-        app:cornerRadius="@dimen/corner_radius"
-        app:icon="@drawable/ic_settings"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/padding_10"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/ic_settings" />
 
 </LinearLayout>
