--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,8 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorSecondary"
+    android:orientation="vertical"
     tools:context=".SearchActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/buttonBack"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:backgroundTint="?attr/colorSecondary"
+            android:src="@drawable/ic_arrow_back"
+            app:tint="?attr/colorOnSecondary"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            style="@style/TopBarTextViewStyle"
+            android:text="@string/search"
+            tools:ignore="RtlSymmetry" />
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/inputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/padding_16"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/padding_16"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/bg_search"
+            android:backgroundTint="@color/yp_light_gray"
+            android:drawableStart="@drawable/ic_search_small"
+            android:drawablePadding="8dp"
+            android:hint="@string/search"
+            android:inputType="text"
+            android:lines="1"
+            android:maxLength="20"
+            android:textColor="@color/yp_black"
+            tools:ignore="Autofill" />
+
+        <ImageView
+            android:id="@+id/clear_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:src="@drawable/ic_search_clear"
+            android:visibility="gone"
+            android:contentDescription="@string/clear_search_text"
+            android:layout_marginEnd="18dp"/>
+    </FrameLayout>
+</LinearLayout>
