--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,99 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="?attr/colorSecondary"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/buttonBack"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="@color/white"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:backgroundTint="?attr/colorSecondary"
             android:src="@drawable/ic_arrow_back"
+            app:tint="?attr/colorOnSecondary"
             tools:ignore="ContentDescription" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="14dp"
-            android:fontFamily="@font/ys_display_medium"
+            style="@style/TopBarTextViewStyle"
             android:text="@string/settings"
-            android:textColor="@color/black"
-            android:textSize="@dimen/main_menu_textSize" />
+            tools:ignore="RtlSymmetry" />
     </LinearLayout>
 
     <Switch
         android:layout_width="match_parent"
         android:layout_height="61dp"
-        android:layout_marginTop="40dp"
-        android:backgroundTint="@color/white"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/yp_white"
         android:fontFamily="@font/ys_display_regular"
         android:gravity="center_vertical"
         android:letterSpacing="0"
         android:paddingStart="@dimen/padding_16"
         android:text="@string/dark_theme"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor="?attr/colorOnSecondary"
         android:textFontWeight="400"
         android:textSize="@dimen/settings_menu_textSize"
+        android:thumbTint="?attr/thumbTint"
+        android:trackTint="?attr/trackTint"
         tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />
 
     <TextView
         android:id="@+id/share"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/ys_display_regular"
-        android:letterSpacing="0"
-        android:paddingStart="@dimen/padding_16"
-        android:paddingTop="@dimen/padding_20"
-        android:paddingEnd="@dimen/padding_16"
-        android:paddingBottom="@dimen/padding_20"
+        style="@style/SettingsMenuButtonStyle"
         android:text="@string/share"
-        android:textColor="@color/black"
-        android:textFontWeight="400"
-        android:textSize="@dimen/settings_menu_textSize"
-        app:drawableEndCompat="@drawable/ic_share"
-        app:iconTint="@color/grey" />
+        app:drawableEndCompat="@drawable/ic_share" />
 
     <TextView
         android:id="@+id/support"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/ys_display_regular"
-        android:letterSpacing="0"
-        android:paddingStart="@dimen/padding_16"
-        android:paddingTop="@dimen/padding_20"
-        android:paddingEnd="@dimen/padding_16"
-        android:paddingBottom="@dimen/padding_20"
+        style="@style/SettingsMenuButtonStyle"
         android:text="@string/support"
-        android:textColor="@color/black"
-        android:textFontWeight="400"
-        android:textSize="@dimen/settings_menu_textSize"
-        app:drawableEndCompat="@drawable/ic_support"
-        app:iconTint="@color/grey" />
+        app:drawableEndCompat="@drawable/ic_support" />
 
     <TextView
         android:id="@+id/termsOfUse"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/ys_display_regular"
-        android:letterSpacing="0"
-        android:paddingStart="@dimen/padding_16"
-        android:paddingTop="@dimen/padding_20"
-        android:paddingEnd="@dimen/padding_16"
-        android:paddingBottom="@dimen/padding_20"
+        style="@style/SettingsMenuButtonStyle"
         android:text="@string/terms_of_use"
-        android:textColor="@color/black"
-        android:textFontWeight="400"
-        android:textSize="@dimen/settings_menu_textSize"
-        app:drawableEndCompat="@drawable/ic_next"
-        app:iconTint="@color/grey" />
+        app:drawableEndCompat="@drawable/ic_next" />
 </LinearLayout>
