--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue">#3772E7</color>
-    <color name="grey">#AEAFB4</color>
+    <color name="black">#000000</color>
+    <color name="yp_white">#FFFFFFFF</color>
+    <color name="yp_blue">#3772E7</color>
+    <color name="yp_grey">#AEAFB4</color>
+    <color name="yp_light_gray">#E6E8EB</color>
+    <color name="yp_black">#1A1B22</color>
+
 </resources>
