--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -26,6 +26,10 @@
 
         <TextView
             style="@style/TopBarTextViewStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:paddingStart="12dp"
             android:text="@string/search"
             tools:ignore="RtlSymmetry" />
     </LinearLayout>
@@ -35,7 +39,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/inputEditText"
+            android:id="@+id/editTextSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/padding_16"
@@ -54,13 +58,13 @@
             tools:ignore="Autofill" />
 
         <ImageView
-            android:id="@+id/clear_icon"
+            android:id="@+id/clearIconImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
-            android:src="@drawable/ic_search_clear"
-            android:visibility="gone"
+            android:layout_marginEnd="18dp"
             android:contentDescription="@string/clear_search_text"
-            android:layout_marginEnd="18dp"/>
+            android:src="@drawable/ic_search_clear"
+            android:visibility="gone" />
     </FrameLayout>
 </LinearLayout>
