--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,10 +25,10 @@
             tools:ignore="ContentDescription" />
 
         <TextView
-            style="@style/TopBarTextViewStyle"
+            style="@style/textViewTopBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="@dimen/margin_14"
             android:paddingStart="12dp"
             android:text="@string/search"
             tools:ignore="RtlSymmetry" />
@@ -43,9 +43,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/padding_16"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/margin_8"
             android:layout_marginEnd="@dimen/padding_16"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/margin_8"
             android:background="@drawable/bg_search"
             android:backgroundTint="@color/yp_light_gray"
             android:drawableStart="@drawable/ic_search_small"
@@ -58,7 +58,7 @@
             tools:ignore="Autofill" />
 
         <ImageView
-            android:id="@+id/clearIconImageView"
+            android:id="@+id/imageViewClearIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
@@ -67,4 +67,11 @@
             android:src="@drawable/ic_search_clear"
             android:visibility="gone" />
     </FrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_16"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </LinearLayout>
