--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,10 @@
     <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_20">20dp</dimen>
     <dimen name="padding_10">10dp</dimen>
+    <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_66">66dp</dimen>
+    <dimen name="margin_14">14dp</dimen>
     <dimen name="main_menu_textSize">22sp</dimen>
     <dimen name="settings_menu_textSize">16sp</dimen>
+    <dimen name="text_size_11">11sp</dimen>
 </resources>
