--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -47,25 +47,28 @@
             android:layout_marginEnd="@dimen/padding_16"
             android:layout_marginBottom="@dimen/margin_8"
             android:background="@drawable/bg_search"
-            android:backgroundTint="@color/yp_light_gray"
+            android:backgroundTint="?attr/colorBackgroundFloating"
             android:drawableStart="@drawable/ic_search_small"
             android:drawablePadding="8dp"
             android:hint="@string/search"
             android:inputType="text"
             android:lines="1"
             android:maxLength="20"
+            android:paddingStart="12dp"
             android:textColor="@color/yp_black"
-            tools:ignore="Autofill" />
+            android:textCursorDrawable="@drawable/ic_cursor"
+            tools:ignore="Autofill,RtlSymmetry" />
 
         <ImageView
             android:id="@+id/imageViewClearIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="18dp"
+            android:layout_marginEnd="28dp"
             android:contentDescription="@string/clear_search_text"
             android:src="@drawable/ic_search_clear"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:tint="?attr/colorPrimaryVariant" />
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
