--- a/app/src/main/res/layout/track_list_view.xml
+++ b/app/src/main/res/layout/track_list_view.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_66"
         android:layout_marginTop="@dimen/margin_14"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="@dimen/margin_44"
         android:ellipsize="end"
         android:fontFamily="@font/ys_display_regular"
         android:maxLines="1"
@@ -35,15 +35,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginStart="@dimen/margin_66"
-        android:layout_marginEnd="44dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="@dimen/margin_44"
         android:layout_marginBottom="@dimen/margin_14"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textViewArtistName"
             style="@style/artistNameTextViewStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="1"
             android:singleLine="true"
