--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="drawableTint">@color/yp_grey</item>
         <item name="android:textColorHint">@color/yp_grey</item>
         <item name="colorPrimaryVariant">@color/yp_grey</item>
+        <item name="colorButtonNormal">@color/yp_black</item>
 
     </style>
 
