--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -51,10 +51,12 @@
             android:drawableStart="@drawable/ic_search_small"
             android:drawablePadding="8dp"
             android:hint="@string/search"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:lines="1"
             android:maxLength="20"
             android:paddingStart="12dp"
+            android:singleLine="true"
             android:textColor="@color/yp_black"
             android:textCursorDrawable="@drawable/ic_cursor"
             tools:ignore="Autofill,RtlSymmetry" />
@@ -71,10 +73,86 @@
             app:tint="?attr/colorPrimaryVariant" />
     </FrameLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewSearch"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/padding_16"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/padding_16">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+        <LinearLayout
+            android:id="@+id/linearLayoutNothingFound"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone"
+            tools:ignore="UseCompoundDrawables">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/margin_120"
+                android:layout_marginTop="@dimen/margin_102"
+                android:src="@drawable/nothing_found"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                style="@style/ErrorTextViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="@dimen/margin_24"
+                android:layout_marginTop="@dimen/padding_16"
+                android:text="@string/nothing_found" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutNoInternet"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/margin_120"
+                android:layout_marginTop="@dimen/margin_102"
+                android:src="@drawable/no_internet"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                style="@style/ErrorTextViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="@dimen/margin_24"
+                android:layout_marginTop="@dimen/padding_16"
+                android:text="@string/no_internet" />
+
+            <Button
+                android:id="@+id/buttonRefreshSearch_"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/margin_24"
+                android:backgroundTint="?attr/colorButtonNormal"
+                android:fontFamily="@font/ys_display_medium"
+                android:letterSpacing="0"
+                android:text="@string/refresh"
+                android:textAllCaps="false"
+                android:textColor="?attr/colorSecondary"
+                android:textFontWeight="500"
+                android:textSize="@dimen/refresh_button_text_size"
+                app:cornerRadius="@dimen/refresh_button_corner_radius" />
+        </LinearLayout>
+
+
+    </FrameLayout>
 </LinearLayout>
