--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,7 @@
         <item name="drawableTint">@color/yp_black</item>
         <item name="android:textColorHint">@color/yp_black</item>
         <item name="colorPrimaryVariant">@color/yp_black</item>
+        <item name="colorButtonNormal">@color/yp_white</item>
 
 
     </style>
