--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/yp_black</item>
-        <item name="android:textSize">@dimen/main_menu_textSize</item>
+        <item name="android:textSize">@dimen/main_menu_text_size</item>
         <item name="android:textFontWeight">500</item>
         <item name="android:letterSpacing">0</item>
         <item name="cornerRadius">@dimen/corner_radius</item>
@@ -25,20 +25,28 @@
         <item name="android:paddingBottom">@dimen/padding_20</item>
         <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:textFontWeight">400</item>
-        <item name="android:textSize">@dimen/settings_menu_textSize</item>
+        <item name="android:textSize">@dimen/settings_menu_text_size</item>
         <item name="drawableTint">?attr/colorSecondaryVariant</item>
     </style>
 
     <style name="textViewTopBarStyle">
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textColor">?attr/colorOnSecondary</item>
-        <item name="android:textSize">@dimen/main_menu_textSize</item>
+        <item name="android:textSize">@dimen/main_menu_text_size</item>
     </style>
 
     <style name="artistNameTextViewStyle">
         <item name="android:textSize">@dimen/text_size_11</item>
         <item name="android:textColor">?attr/colorSecondaryVariant</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="ErrorTextViewStyle">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/error_text_size</item>
     </style>
 
 </resources>
