--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,12 +41,24 @@
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
 
-    <style name="ErrorTextViewStyle">
+    <style name="searchMenuTextViewStyle">
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:textFontWeight">400</item>
         <item name="android:textSize">@dimen/error_text_size</item>
     </style>
+
+    <style name="searchMenuButtonStyle">
+        <item name="android:backgroundTint">?attr/colorButtonNormal</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">?attr/colorSecondary</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textSize">@dimen/refresh_button_text_size</item>
+        <item name="cornerRadius">@dimen/refresh_button_corner_radius</item>
+    </style>
+
 
 </resources>
