--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,9 +56,24 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">?attr/colorSecondary</item>
         <item name="android:textFontWeight">500</item>
-        <item name="android:textSize">@dimen/refresh_button_text_size</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
         <item name="cornerRadius">@dimen/refresh_button_corner_radius</item>
     </style>
 
+    <style name="MediaTitleTextStyle">
+        <item name="android:textColor">@color/yp_grey</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/text_size_12</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="MediaDescriptionTextStyle">
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/text_size_12</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+
+
+    </style>
 
 </resources>
