--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -86,6 +86,15 @@
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+        <ProgressBar
+            android:id="@+id/progressBarSearchLoading"
+            android:layout_marginTop="132dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center_horizontal"
+            android:indeterminateTint="@color/yp_blue"
+            android:visibility="gone" />
+
         <LinearLayout
             android:id="@+id/linearLayoutNothingFound"
             android:layout_width="match_parent"
@@ -170,8 +179,8 @@
             android:id="@+id/recyclerViewSearchHistory"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginTop="20dp"
+            android:layout_weight="1"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <Button
