--- a/app/src/main/res/layout/activity_media_library.xml
+++ b/app/src/main/res/layout/activity_media_library.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.mediaLibrary.MediaLibraryActivity">
+    tools:context=".media.ui.MediaLibraryActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
