--- a/app/src/main/res/layout/track_list_item.xml
+++ b/app/src/main/res/layout/track_list_item.xml
@@ -27,7 +27,7 @@
         android:fontFamily="@font/ys_display_regular"
         android:maxLines="1"
         android:textColor="?attr/colorOnSecondary"
-        android:textSize="@dimen/settings_menu_text_size"
+        android:textSize="@dimen/text_size_16"
         tools:text="Название трека" />
 
     <LinearLayout
