--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:paddingBottom">@dimen/padding_20</item>
         <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:textFontWeight">400</item>
-        <item name="android:textSize">@dimen/settings_menu_text_size</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
         <item name="drawableTint">?attr/colorSecondaryVariant</item>
     </style>
 
@@ -72,8 +72,16 @@
         <item name="android:textFontWeight">400</item>
         <item name="android:textSize">@dimen/text_size_12</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
 
+    <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabTextAppearance">@style/MyCustomTextAppearance</item>
+    </style>
 
+    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
 </resources>
