--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,30 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorSecondary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/buttonBack"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
-            android:backgroundTint="?attr/colorSecondary"
-            android:src="@drawable/ic_arrow_back"
-            app:tint="?attr/colorOnSecondary"
-            tools:ignore="ContentDescription" />
-
         <TextView
             style="@style/textViewTopBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:paddingStart="12dp"
+            android:paddingStart="@dimen/padding_16"
             android:text="@string/settings"
             tools:ignore="RtlSymmetry" />
     </LinearLayout>
