--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -3,29 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.playlistmaker.media.ui.FavoritesFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="@dimen/margin_120"
+        android:layout_marginTop="@dimen/margin_106"
+        android:src="@drawable/nothing_found"
+        tools:ignore="ContentDescription" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="@dimen/margin_120"
-            android:layout_marginTop="@dimen/margin_106"
-            android:src="@drawable/nothing_found"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            style="@style/searchMenuTextViewStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginHorizontal="@dimen/margin_24"
-            android:layout_marginTop="@dimen/padding_16"
-            android:text="@string/empty_media_library" />
-    </LinearLayout>
+    <TextView
+        style="@style/searchMenuTextViewStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginHorizontal="@dimen/margin_24"
+        android:layout_marginTop="@dimen/padding_16"
+        android:text="@string/empty_media_library" />
 </LinearLayout>
