--- a/app/src/main/res/layout/fragment_media_library.xml
+++ b/app/src/main/res/layout/fragment_media_library.xml
@@ -6,30 +6,19 @@
     android:layout_height="match_parent"
     android:background="?attr/colorSecondary"
     android:orientation="vertical"
-    tools:context=".media.ui.MediaLibraryActivity">
+    tools:context="com.example.playlistmaker.media.ui.MediaLibraryFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/buttonBack"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
-            android:backgroundTint="?attr/colorSecondary"
-            android:src="@drawable/ic_arrow_back"
-            app:tint="?attr/colorOnSecondary"
-            tools:ignore="ContentDescription" />
-
         <TextView
             style="@style/textViewTopBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_14"
-            android:paddingStart="12dp"
+            android:paddingStart="@dimen/padding_16"
             android:text="@string/media_library"
             tools:ignore="RtlSymmetry" />
     </LinearLayout>
