--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,4 +84,8 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
+    <style name="BottomNavigationViewStyle">
+        <item name="itemIconTint">@drawable/bottom_navigation</item>
+        <item name="itemTextColor">@drawable/bottom_navigation</item>
+    </style>
 </resources>
