--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="corner_radius">16dp</dimen>
     <dimen name="rounded_corners_cover">2dp</dimen>
     <dimen name="rounded_corners_big_cover">8dp</dimen>
+    <dimen name="rounded_corners_bottom_sheet">16dp</dimen>
     <dimen name="refresh_button_corner_radius">54dp</dimen>
     <dimen name="padding_8">8dp</dimen>
     <dimen name="padding_10">10dp</dimen>
@@ -26,4 +27,5 @@
     <dimen name="text_size_14">14sp</dimen>
     <dimen name="margin_106">106dp</dimen>
     <dimen name="margin_46">46dp</dimen>
+    <dimen name="text_size_19">19sp</dimen>
 </resources>
