--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -88,4 +88,20 @@
         <item name="itemIconTint">@drawable/bottom_navigation</item>
         <item name="itemTextColor">@drawable/bottom_navigation</item>
     </style>
+
+    <style name="TextFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
+        <item name="android:textSize">12sp</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+        <item name="fontWeight">400</item>
+        <item name="boxStrokeColor">@color/new_playlist_color_text</item>
+        <item name="android:letterSpacing">0.4</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/text_field_radius</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/text_field_radius</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/text_field_radius</item>
+        <item name="boxCornerRadiusTopStart">@dimen/text_field_radius</item>
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxStrokeWidthFocused">1dp</item>
+    </style>
+
+    <dimen name="text_field_radius">4dp</dimen>
 </resources>
