--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.playlistmaker.media.ui.PlayListsFragment">
+
+    <Button
+        android:id="@+id/buttonNewPlaylist"
+        style="@style/searchMenuButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/margin_24"
+        android:text="@string/new_playlist" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPlaylists"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/margin_16"
+        android:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/linearLayoutEmptyPlaylists"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/buttonNewPlaylist"
-            style="@style/searchMenuButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/margin_24"
-            android:text="@string/new_playlist" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -44,4 +48,4 @@
             android:text="@string/empty_playlists" />
 
     </LinearLayout>
-</FrameLayout>
+</LinearLayout>
