--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="corner_radius">16dp</dimen>
     <dimen name="rounded_corners_cover">2dp</dimen>
+    <dimen name="rounded_corners_small_cover">2dp</dimen>
     <dimen name="rounded_corners_big_cover">8dp</dimen>
     <dimen name="rounded_corners_bottom_sheet">16dp</dimen>
     <dimen name="refresh_button_corner_radius">54dp</dimen>
