--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,7 +89,7 @@
         <item name="itemTextColor">@drawable/bottom_navigation</item>
     </style>
 
-    <style name="TextFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
+    <style name="TextFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:textSize">12sp</item>
         <item name="fontFamily">@font/ys_display_regular</item>
         <item name="fontWeight">400</item>
@@ -101,6 +101,8 @@
         <item name="boxCornerRadiusTopStart">@dimen/text_field_radius</item>
         <item name="boxStrokeWidth">1dp</item>
         <item name="boxStrokeWidthFocused">1dp</item>
+        <item name="android:textColorHint">@color/yp_grey</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
     </style>
 
     <dimen name="text_field_radius">4dp</dimen>
