--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -20,8 +20,8 @@
             android:id="@+id/buttonBack"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="@dimen/margin_4"
+            android:layout_marginTop="@dimen/margin_4"
             android:backgroundTint="?attr/colorSecondary"
             android:src="@drawable/ic_arrow_back"
             app:tint="?attr/colorOnSecondary"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_14"
-            android:paddingStart="12dp"
+            android:paddingStart="@dimen/padding_12"
             android:text="@string/new_playlist"
             tools:ignore="RtlSymmetry" />
 
@@ -43,7 +43,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_24"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="@dimen/margin_26"
         android:scaleType="centerCrop"
         android:src="@drawable/bg_add_cover"
         app:layout_constraintDimensionRatio="h,1:1"
@@ -57,7 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_16"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/margin_32"
         app:hintTextColor="@color/yp_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,9 +69,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/playlist_name"
             android:lines="1"
-            android:paddingStart="16dp"
-            android:paddingTop="18dp"
-            android:paddingBottom="18dp" />
+            android:paddingStart="@dimen/margin_16"
+            android:paddingTop="@dimen/margin_18"
+            android:paddingBottom="@dimen/margin_18" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,7 +80,7 @@
         style="@style/TextFieldStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/margin_8"
         app:boxStrokeWidth="1dp"
         app:boxStrokeWidthFocused="1dp"
         app:hintTextColor="@color/yp_blue"
@@ -94,9 +94,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/playlist_description"
             android:lines="1"
-            android:paddingStart="16dp"
-            android:paddingTop="18dp"
-            android:paddingBottom="18dp" />
+            android:paddingStart="@dimen/padding_16"
+            android:paddingTop="@dimen/margin_18"
+            android:paddingBottom="@dimen/margin_18" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,15 +104,15 @@
         android:id="@+id/buttonCreateNewPlaylist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginHorizontal="@dimen/margin_16"
+        android:layout_marginBottom="@dimen/margin_32"
         android:background="@drawable/bg_create_playlist"
         android:fontFamily="@font/ys_display_medium"
         android:letterSpacing="0"
         android:text="@string/create"
         android:textAllCaps="false"
         android:textColor="@color/yp_white"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_16"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
