--- a/app/src/main/res/layout/player_playlist_item.xml
+++ b/app/src/main/res/layout/player_playlist_item.xml
@@ -6,14 +6,22 @@
     android:layout_height="wrap_content"
     android:backgroundTint="?attr/colorSecondary">
 
-    <ImageView
-        android:id="@+id/imageViewPlayerPlaylistCover"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/margin_8"
-        android:layout_marginStart="13dp"
-        tools:ignore="ContentDescription"
-        tools:src="@drawable/ic_placeholder" />
+        android:layout_marginStart="14dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="0dp">
+
+        <ImageView
+            android:id="@+id/imageViewPlayerPlaylistCover"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription"
+            tools:src="@drawable/ic_placeholder" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/textViewPlayerPlaylistName"
@@ -40,7 +48,7 @@
         android:layout_marginBottom="@dimen/margin_14"
         android:ellipsize="end"
         android:maxLines="1"
-        tools:text="Кол-во треков"
-        android:textSize="11sp"/>
+        android:textSize="11sp"
+        tools:text="Кол-во треков" />
 
 </androidx.cardview.widget.CardView>
