--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,6 @@
 <resources>
     <dimen name="corner_radius">16dp</dimen>
     <dimen name="rounded_corners_cover">2dp</dimen>
-    <dimen name="rounded_corners_small_cover">2dp</dimen>
     <dimen name="rounded_corners_big_cover">8dp</dimen>
     <dimen name="rounded_corners_bottom_sheet">16dp</dimen>
     <dimen name="refresh_button_corner_radius">54dp</dimen>
@@ -29,4 +28,9 @@
     <dimen name="margin_106">106dp</dimen>
     <dimen name="margin_46">46dp</dimen>
     <dimen name="text_size_19">19sp</dimen>
+    <dimen name="text_field_radius">4dp</dimen>
+    <dimen name="margin_18">18dp</dimen>
+    <dimen name="padding_12">12dp</dimen>
+    <dimen name="margin_32">32dp</dimen>
+    <dimen name="margin_26">26dp</dimen>
 </resources>
