--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -105,5 +105,10 @@
         <item name="android:textColor">?attr/colorOnSecondary</item>
     </style>
 
-    <dimen name="text_field_radius">4dp</dimen>
+    <style name="PlaylistTextStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/text_size_12</item>
+    </style>
 </resources>
