--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -28,6 +28,7 @@
             tools:ignore="ContentDescription" />
 
         <TextView
+            android:id="@+id/textViewTittle"
             style="@style/textViewTopBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
