--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -111,4 +111,17 @@
         <item name="android:textFontWeight">400</item>
         <item name="android:textSize">@dimen/text_size_12</item>
     </style>
+
+    <style name="PlaylistDetailsStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="DialogStyle" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="background">@color/yp_white</item>
+        <item name="android:textColor">@color/yp_blue</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+    </style>
 </resources>
